Fix overlap in summary tab

--- a/docroot/themes/iucn_who/css/style.css
+++ b/docroot/themes/iucn_who/css/style.css
@@ -11806,6 +11806,11 @@ body.page-node-type-site #sidemenu {
   font-size: 2.8rem;
   margin-top: 0;
 }
+@media screen and (min-width: 768px) {
+  .iucn-site-wrapper .conservation-outlook-summary-group h3 {
+    margin-right: 6em;
+  }
+}
 @media screen and (max-width: 767px) {
   .iucn-site-wrapper .conservation-outlook-summary-group h3 {
     font-weight: 500;
