--- a/docroot/themes/iucn_who/less/theme/assessments.less
+++ b/docroot/themes/iucn_who/less/theme/assessments.less
@@ -419,6 +419,9 @@ body.page-node-type-site {
     h3 {
       .remify(font-size, 28px);
       margin-top: 0;
+      @media @grid-desktop {
+        margin-right: 6em;
+      }
       @media @grid-mobile {
         font-weight: 500;
       }
